add supplier information

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ flutter:
     - assets/images/hazard.png
     - assets/images/MEDI.png
     - assets/images/archive.png
+    - assets/images/supplier.png
+    - assets/images/pesticide.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
